--- a/app/templates/staff/staff_stable_load.html
+++ b/app/templates/staff/staff_stable_load.html
@@ -72,7 +72,8 @@
               {{ form.enable_edit(class="btn btn-warning fw-bold") }}
             {% endif %}
           {% endif %}
-            {{ form.make_report(class="btn btn-success fw-bold") }}
+            <a class="btn btn-success fw-bold" role="button"
+               href="{{ url_for('staff.staff_stable_file_report', date=date) }}">Сформировать отчет</a>
           </div>
         </div>
       </div>
