Add link to propusk service

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,6 +53,22 @@
         </div>
       {% endif %}
 
+
+
+      <div class="col">
+        <div class="card">
+          <div class="card-body p-4">
+            <a class="dropdown-item" href="http://propusk.orui.ru">
+              <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+                <i class="fas fa-home"></i>
+              </div>
+              <h4 class="card-title" style="color: rgb(58,59,69);">Пропуск</h4>
+            </a>
+            <p class="card-text">Система автоматизированного получения пропусков<br></p>
+          </div>
+        </div>
+      </div>
+
       <div class="col">
         <div class="card">
           <div class="card-body p-4">
